projet_gl/src/test/deca/codegen/valid/ERROR/overflow.deca
// Description:
//    Overflow
//
// Resultats:
//    Error : Overflow during arithmetic operation
// 
// Historique:
//    cree le 09/01/2024

{
    int a = 1000000000*1000000000;
}

